--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <span class="tempo">Horas</span>
         </section>
         <section>
-            <span class="minutos">00</span>
+            <span id="minutos">00</span>
             <span class="tempo">Minutos</span>
         </section>
         <section>
